--- a/docs/interni/verbali/2023_09_04_I/2023_09_04_I.tex
+++ b/docs/interni/verbali/2023_09_04_I/2023_09_04_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 04/09/2023}
 \setredattori{Brotto Romina}
-\setrevisori{}
+\setrevisori{Soldà Matteo}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 04/09/2023
@@ -42,7 +42,7 @@
 \section*{Conclusioni}
 Il gruppo ha condiviso le ultime modifiche apportate al progetto, in particolare riguardanti gli unit test, i test automatici, i test di \textit{Code Coverage} e la parte grafica della \textit{Web App}.
 \'E inoltre iniziata la stesura della specifica architetturale e della specifica tecnica.\\
-La documentazione è stata aggiornata allo sprint corrente e 
+La documentazione è stata aggiornata allo sprint corrente.
 
 
 \section*{Impegni Assunti}
@@ -53,7 +53,7 @@ Per la documentazione in LumosMinima:
     \item Ultimare il \textit{Piano di Qualifica} (issue \#96);
     \item Porcedere con la Specifica Architetturale e la Specifica Tecnica (issues \#106 - \#107).
 \end{itemize}
-
+\vspace*{0.5cm}
 Per il codice presente nella repository LumosMinima-code:
 \begin{itemize}
     \item Da ultimare la sezione login;
