--- a/docs/esterni/specifica_tecnica/specifica_tecnica.tex
+++ b/docs/esterni/specifica_tecnica/specifica_tecnica.tex
@@ -21,11 +21,16 @@ Questo documento descrive la specifica architetturale del progetto, illustrando 
 \tableofcontents
 \newpage
 \clearpage
-\makecontentsdetails{Motivazione delle Scelte}
+\makecontentsdetails{Specifica Tecnica}
 \newpage
 \section{Introduzione}
 Questo documento ha lo scopo di descrivere nel dettaglio, sopratutto tramite diagrammi, le caratteristiche architetturali del prodotto software sviluppato.
-\subsection{Riferimenti}
+\subsection{Riferimenti Normativi}
+\begin{itemize}
+    \item \href{https://www.math.unipd.it/~tullio/IS-1/2022/Progetto/C2.pdf}{Capitolato C2 - Lumos Minima}
+\end{itemize}
+
+\subsection{Riferimenti Informativi}
 \begin{itemize}
     \item \href{https://www.math.unipd.it/~rcardin/swea/2022/Software%20Architecture%20Patterns.pdf}{Design Pattern Architetturali}
     \item \href{https://www.math.unipd.it/~rcardin/swea/2022/Design%20Pattern%20Architetturali%20-%20Dependency%20Injection.pdf}{Dependency Injection}
