--- a/docs/esterni/manuale_utente/manuale_utente.tex
+++ b/docs/esterni/manuale_utente/manuale_utente.tex
@@ -15,6 +15,7 @@ Questo documento descrive le funzionalità del programma a coloro che dovessero 
 }
 
 \addversione{0.0.0}{05/09/2023}{Soldà Matteo}{}{Prima stesura.}
+\addversione{0.0.1}{07/09/2023}{Soldà Matteo}{}{Aggiunta sottosezioni + prime descrizioni}
 \begin{document}
 \makeindexdetails
 \makefrontpage \makeversioni
@@ -29,18 +30,62 @@ Questo documento, destinato agli utenti finali del programma, descrive le funzio
 \newpage
 \section{Descrizione del Sistema}
 \textit{Lumos Minima} è una webapp creata appositamente per la gestione di aree illuminate composta da sensori e lampioni. I primi hanno l'obiettivo di rilevare il passaggio di una persona, di un veicolo e persino di un animale nel loro raggio d'azione, mentre il lampione ha lo scopo di illuminare l'area circostante. Il sistema è in grado di gestire più aree illuminate, ognuna con i propri sensori e lampioni.\\
+% Inserire una descrizione del progetto nel completo, quindi scopi e cose simili
 
 \newpage
 \section{Utenza}
+\subsection{Informazioni Preliminari}
+L'applicazione permette l'utilizzo di 3 tipi di utente:
+\begin{itemize}
+    \item Utente base
+    \item Utente amministratore (admin)
+    \item Utente manutentore
+\end{itemize}
+L'utilizzo dell'utente \textbf{base} permette di utilizzare tutte le funzionalità di base dell'applicazione, tra cui la creazione, la modifica e la rimozione di tutti gli elementi presenti a sistema, oltre alla possibilità di segnalare i guasti agli impianti luminosi.\\ \\
+L'utilizzo dell'utente \textbf{amministratore} permette di fare tutto ciò che l'utente base può fare, con l'aggiunta della possibilità di modificare i ruoli degli altri utenti.\\ \\
+L'utilizzo dell'utente \textbf{manutentore} permette di fare tutto ciò che l'utente base può fare, con l'aggiunta della possibilità di visualizzare la lista dei lampioni guasti area per area, permettendo inoltre di segnalare la loro riparazione.
+
+\subsection{Login}
+Il login è la prima cosa che viene richiesta qualora si raggiungesse l'indirizzo dell'applicazione. In questa schermata andrà inserito lo username e la password del proprio utente. Qualora i dati inseriti siano corretti, si verrà renderizzati automaticamente alla dashboard, altrimenti verrà riproposta la pagina di login con un errore. La durata della sessione dopo un login effettuato con successo è di un'ora.
+% Immagine della schermata di login
+
+\subsection{Logout}
+La funzionalità di logout permette di terminare la sessione generata da un precedente login non ancora scaduto. Il pulsante per il logout è posizionato nella dashboard nell'angolo in alto a destra.
+% Immagine del pulsante di logout
 
 \newpage
 \section{Aree Illuminate}
+\subsection{Informazioni Preliminari}
+Le aree illuminate sono la componente di base dell'applicazione. Esse al loro interno possono contenere molteplici lampioni e sensori che interagiscono in modo diverso coerentemente alla loro configurazione.
+\subsection{Lista Aree Illuminate}
+Entrando nella dashboard dopo il login, verrà presentata la lista delle aree illuminate che sono state inserite a sistema. Ogni area presenta come informazione il proprio ID (generato automaticamente), il nome assegnato, la descrizione, la latitudine e la longitudine. Al fianco di queste informazioni sono presentati tre pulsanti: informazioni, modifica ed elimina. \\
+Il pulsante \textit{informazioni} permette di caricare tutte le informazioni dell'area illuminata, permettendo inoltre di visualizzare i lampioni e i sensori ad essa collegati.\\
+Il pulsante \textit{modifica} permette di aprire una schermata dalla quale modificare i dati dell'area.\\
+Il pulsante \textit{elimina} permette di eliminare l'area. L'azione non avviene subito dopo la pressione del pulsante, ma richiede una seconda conferma tramite modale. \\
+\\
+Al di sopra della lista delle aree è presente un pulsante che permette di inerire una nuova area, funzionalità che verrà descritta nella prossima sottosezione
+% Immagine della lista aree (belle popolate ovviamente)
+
+\subsection{Inserimento, Modifica e Rimozione di un'Area Illuminata}
+\subsubsection{Inserimento}
+Al di sopra della lista delle aree è presente un pulsante che riporta l'etichetta \textit{Aggiungi Area} che, alla pressione, apre una nuova schermata nella quale vengono richiesti i dati della nuova area che si vuole inserire a sistema.
+% Scrivere anche cosa viene richiesto?
+% Immagine del pulsante
+
+\subsubsection{Modifica}
+
+\subsubsection{Rimozione}
 
 \newpage
 \section{Lampioni}
+\subsection{Informazioni Preliminari}
+\subsection{Lista Lampioni per Area}
+\subsection{Inserimento, Modifica e Rimozione di un Lampione}
 
 \newpage
 \section{Sensori}
-
+\subsection{Informazioni Preliminari}
+\subsection{Lista Sensori per Area}
+\subsection{Inserimento, Modifica e Rimozione di un Lampione}
 
 \end{document}
