Prima parte sensore

--- a/docs/esterni/manuale_utente/manuale_utente.tex
+++ b/docs/esterni/manuale_utente/manuale_utente.tex
@@ -112,6 +112,7 @@ A lato delle informazioni riportate nella tabella dei lampioni, c'è un pulsante
 \newpage
 \section{Sensori}
 \subsection{Informazioni Preliminari}
+Il sensore è la componente dell'area che ha lo scopo di rilevare e di conseguenza segnalare i movimenti di cose, persone e animali nel suo raggio d'azione. 
 \subsection{Lista Sensori per Area}
 \subsection{Inserimento, Modifica e Rimozione di un Sensore}
 
