--- a/docs/esterni/manuale_utente/manuale_utente.tex
+++ b/docs/esterni/manuale_utente/manuale_utente.tex
@@ -24,8 +24,13 @@ Questo documento descrive le funzionalità del programma a coloro che dovessero 
 \clearpage
 \makecontentsdetails{Manuale Utente}
 \newpage
-\section{Introduzione}
-Questo documento, destinato agli utenti finali del programma, descrive le funzionalità implementate e come utilizzarle al meglio.
+\section{Introduzione e Origine del Progetto}
+Questo documento, destinato agli utenti finali del programma, descrive le funzionalità implementate e come utilizzarle al meglio.\\ \\
+La crisi internazionale determinata dal conflitto Russia-Ucraina iniziato nel 2022 ha cambiato radicalmente gli assetti geopolitici. Oltre ai notevoli costi sociali ed economici, ripropone a livello globale la centralità di temi energetici e ambientali.\\
+Il risparmio delle risorse del Pianeta, e in particolare delle fonti energetiche è entrato con forza nell'agenda politica dell'Unione Europea. Fra gli impatti più evidenti, spicca la crescita esponenziale del prezzo del gas, risorsa ancora largamente utilizzata come materia prima per la produzione di energia elettrica. Mentre in sede di Commissione Europea è in corso un acceso di dibattito sul tetto al prezzo del gas, in Italia si susseguono misure atte al risparmio energetico.\\\\
+Accanto a tali criticità, figurano il cambiamento climatico e il surriscaldamento globale che rappresentano un'ulteriore emergenza: gli altissimi livelli di emissioni di anidride carbonica e la gestione dei così detti gas serra che stanno irreversibilmente modificando il clima, il Pianeta e l'eredità che lasceremo alle generazioni future.\\\\
+Per far fronte al rincaro delle bollette energetiche, molti Comuni italiani stanno annunciando il taglio dell'illuminazione pubblica, che necessita di una quantità considerevole di energia elettrica.\\\\
+Con questo progetto proponiamo un sistema per l'ottimizzazione dell'illuminazione pubblica
 
 \newpage
 \section{Descrizione del Sistema}
@@ -91,9 +96,9 @@ Inoltre, si può decidere se un lampione è recettivo rispetto ai segnali oppure
 \subsection{Lista Lampioni per Area}
 Aprendo le informazioni di una singola area, al di sotto delle informazioni della stessa si troverà la lista dei lampioni collegati all'area selezionata.\\
 Per ogni lampione, sono mostrate nella lista: l'ID (generato automaticamente), lo stato, l'intensità luminosa attuale e il nome del lampione. Al fianco di queste informazioni sono presentati quattro pulsanti: informazioni, modifica, elimina e segnala guasto. \\
-Il pulsante \textit{informazioni} permette di caricare tutte le informazioni dell'area illuminata, permettendo inoltre di visualizzare i lampioni e i sensori ad essa collegati.\\
-Il pulsante \textit{modifica} permette di aprire una schermata dalla quale modificare i dati dell'area.\\
-Il pulsante \textit{elimina} permette di eliminare l'area. L'azione non avviene subito dopo la pressione del pulsante, ma richiede una seconda conferma tramite modale. \\
+Il pulsante \textit{informazioni} permette di caricare tutte le informazioni del lampione.\\
+Il pulsante \textit{modifica} permette di aprire una schermata dalla quale modificare i dati del lampione.\\
+Il pulsante \textit{elimina} permette di eliminare il lampione. L'azione non avviene subito dopo la pressione del pulsante, ma richiede una seconda conferma tramite modale. \\
 Il pulsante \textit{segnala guasto} permette di segnalare manualmente un guasto rilevato nel lampione, inserendolo di conseguenza nella lista guasti (questa funzionalità attualmente è esclusiva dell'utente base e dell'amministratore).\\
 Qualora si effettuasse l'accesso con l'utente manutentore, al termine della lista sarà possibile visualizzare un pulsante grigio che permette di visualizzare i dati dei lampioni guasti, oltre a poter segnalare la loro riparazione con successiva rimozione dalla lista dei guasti.
 
@@ -112,8 +117,24 @@ A lato delle informazioni riportate nella tabella dei lampioni, c'è un pulsante
 \newpage
 \section{Sensori}
 \subsection{Informazioni Preliminari}
-Il sensore è la componente dell'area che ha lo scopo di rilevare e di conseguenza segnalare i movimenti di cose, persone e animali nel suo raggio d'azione. 
+Il sensore è la componente dell'area che ha lo scopo di rilevare e di conseguenza segnalare i movimenti di cose, persone e animali nel suo raggio d'azione. Tra i suoi elementi, ne spicca uno in particolare: la durata della segnalazione. Questo parametro serve a indicare per quanto tempo i lampioni impostati in modalità manuale possano visualizzare la segnalazione come valida durare la verifica ciclica.
 \subsection{Lista Sensori per Area}
+Aprendo le informazioni di una singola area, al di sotto delle informazioni dei lampioni si troverà la lista dei sensori collegati all'area selezionata.\\
+Per ogni sensore, sono mostrate nella lista: l'ID (generato automaticamente), l'indirizzo IP e il nome del sensore. Al fianco di queste informazioni sono presentati tre pulsanti: informazioni, modifica ed elimina. \\
+Il pulsante \textit{informazioni} permette di caricare tutte le informazioni del sensore.\\
+Il pulsante \textit{modifica} permette di aprire una schermata dalla quale modificare i dati del sensore.\\
+Il pulsante \textit{elimina} permette di eliminare il sensore. L'azione non avviene subito dopo la pressione del pulsante, ma richiede una seconda conferma tramite modale. \\
+
 \subsection{Inserimento, Modifica e Rimozione di un Sensore}
+\subsubsection{Inserimento}
+Al di sopra della lista dei sensori è presente un pulsante che riporta l'etichetta \textit{Aggiungi Sensore} che, alla pressione, apre una nuova schermata nella quale vengono richiesti i dati del nuovo impianto di rilevamento che si vuole inserire a sistema.
+% Scrivere anche cosa viene richiesto?
+% Immagine del pulsante
+
+\subsubsection{Modifica}
+A lato delle informazioni riportate nella tabella dei sensori, c'è un pulsante con i bordi e la scritta gialli. Questo pulsante riporta ad una schermata molto simile a quella della creazione del nuovo sensore dalla quale si possono modificare i dati del sensore per il quale si è premuto il pulsante
+
+\subsubsection{Rimozione}
+A lato delle informazioni riportate nella tabella dei sensori, c'è un pulsante con i bordi e la scritta rossi. Il pulsante serve per eliminare il sensore di riferimento. Prima della eliminazione verrà richiesta una seconda conferma tramite una modale
 
 \end{document}
