--- a/docs/esterni/manuale_utente/manuale_utente.tex
+++ b/docs/esterni/manuale_utente/manuale_utente.tex
@@ -14,8 +14,8 @@
 Questo documento descrive le funzionalità del programma a coloro che dovessero usufruirne.
 }
 
-\addversione{0.0.0}{05/09/2023}{Soldà Matteo}{}{Prima stesura.}
-\addversione{0.0.1}{07/09/2023}{Soldà Matteo}{}{Aggiunta sottosezioni + prime descrizioni}
+\addversione{0.0.0}{05/09/2023}{Soldà Matteo}{}{Stesura scheletro}
+\addversione{0.0.1}{07/09/2023}{Soldà Matteo}{}{Stesura prima bozza contenuto}
 \begin{document}
 \makeindexdetails
 \makefrontpage \makeversioni
@@ -30,12 +30,7 @@ La crisi internazionale determinata dal conflitto Russia-Ucraina iniziato nel 20
 Il risparmio delle risorse del Pianeta, e in particolare delle fonti energetiche è entrato con forza nell'agenda politica dell'Unione Europea. Fra gli impatti più evidenti, spicca la crescita esponenziale del prezzo del gas, risorsa ancora largamente utilizzata come materia prima per la produzione di energia elettrica. Mentre in sede di Commissione Europea è in corso un acceso di dibattito sul tetto al prezzo del gas, in Italia si susseguono misure atte al risparmio energetico.\\\\
 Accanto a tali criticità, figurano il cambiamento climatico e il surriscaldamento globale che rappresentano un'ulteriore emergenza: gli altissimi livelli di emissioni di anidride carbonica e la gestione dei così detti gas serra che stanno irreversibilmente modificando il clima, il Pianeta e l'eredità che lasceremo alle generazioni future.\\\\
 Per far fronte al rincaro delle bollette energetiche, molti Comuni italiani stanno annunciando il taglio dell'illuminazione pubblica, che necessita di una quantità considerevole di energia elettrica.\\\\
-Con questo progetto proponiamo un sistema per l'ottimizzazione dell'illuminazione pubblica
-
-\newpage
-\section{Descrizione del Sistema}
-\textit{Lumos Minima} è una webapp creata appositamente per la gestione di aree illuminate composta da sensori e lampioni. I primi hanno l'obiettivo di rilevare il passaggio di una persona, di un veicolo e persino di un animale nel loro raggio d'azione, mentre il lampione ha lo scopo di illuminare l'area circostante. Il sistema è in grado di gestire più aree illuminate, ognuna con i propri sensori e lampioni.\\
-% Inserire una descrizione del progetto nel completo, quindi scopi e cose simili
+Con questo progetto proponiamo un sistema per l'ottimizzazione dell'illuminazione pubblica che permetta ai gestori di sfruttare la possibilità di regolare l'intensità della luce emessa dagli impianti di illuminazione. Un sistema così congegnato consentirebbe, da un lato, di garantire sicurezza stradale e sociale, e dall'altro permetterebbe di risparmiare energia e di conseguenza risorse economiche e ambientali.
 
 \newpage
 \section{Utenza}
