redatto verbale interno 11 09 23

--- a/docs/interni/verbali/2023_09_11_I/2023_09_11_I.tex
+++ b/docs/interni/verbali/2023_09_11_I/2023_09_11_I.tex
@@ -5,12 +5,12 @@
 \input{\templates/front_page}
 \input{\templates/history}
 
-\settitolo{Verbale del 04/09/2023}
+\settitolo{Verbale del 11/09/2023}
 \setredattori{Brotto Romina}
-\setrevisori{Soldà Matteo}
+\setrevisori{}
 \setdestuso{interno}
 \setdescrizione{
-    Verbale dell'incontro del 04/09/2023
+    Verbale dell'incontro del 11/09/2023
 }
 
 \begin{document}
@@ -19,7 +19,7 @@
 
 \section*{Informazioni Generali}
 \begin{itemize}
-    \item Data e Ora: 04/09/2023 15:00
+    \item Data e Ora: 11/09/2023 15:00
     \item Durata: 1h
     \item Piattaforma: Discord
     \item Partecipanti
@@ -35,28 +35,31 @@
 
 \section*{O.D.G}
 \begin{itemize}
-    \item Controllo sui test;
+    \item Stesura documentazione finale
     \item Varie ed Eventuali.
 \end{itemize}
 
 \section*{Conclusioni}
-Il gruppo ha condiviso le ultime modifiche apportate al progetto, in particolare riguardanti gli unit test, i test automatici, i test di \textit{Code Coverage} e la parte grafica della \textit{Web App}.
-\'E inoltre iniziata la stesura della specifica architetturale e della specifica tecnica.\\
-La documentazione è stata aggiornata allo sprint corrente.
+Durante lo sprint corrente è iniziata la stesura della documentazione in previsione all'ingresso in \textit{PB}. 
+In particolare il \textit{Manuale Utente}, di cui si è redatta la struttura base, la \textit{Specifica Tecnica} e la \textit{Specifica Architetturale}.
+
 
 
 \section*{Impegni Assunti}
 
-\'E in programma la richiesta di una call con l'azienda Imola Informatica per aggiornarla dei progressi delle ultime settimane, e per verificare che il lavoro svolto sia conforme alle aspettative.\\ \\
 Per la documentazione in LumosMinima:
 \begin{itemize}
     \item Ultimare il \textit{Piano di Qualifica} (issue \#96);
-    \item Procedere con la Specifica Architetturale e la Specifica Tecnica (issues \#106 - \#107).
+    \item Aggiornare il \textit{Piano di Progetto} allo sprint corrente (issue \#126);
+    \item Procedere con il Manuale Utente (issue \#121);
+    \item Procedere con la Specifica Architetturale e la Specifica Tecnica (issues \#119 - \#106 - \#107).
 \end{itemize}
 \vspace*{0.5cm}
 Per il codice presente nella repository LumosMinima-code:
 \begin{itemize}
-    \item Da ultimare la sezione login;
+    \item Proseguire con gli unit test (issue \#1);
+    \item Inserire una pagina per l'admin di gestione dei ruoli (issue \#39);
+    \item Aggiungere eventuali componenti grafiche di alert per i guasti (issue \#46);
 \end{itemize}
 
 \end{document}
