--- a/docs/esterni/verbali/2023_09_07_E/2023_09_07_E.tex
+++ b/docs/esterni/verbali/2023_09_07_E/2023_09_07_E.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 07/09/2023 con Imola Informatica}
 \setredattori{Brotto Romina}
-\setrevisori{}
+\setrevisori{Soldà Matteo}
 \setdestuso{esterno}
 \setdescrizione{
     Verbale del 07/09/2023 con Imola Informatica
