typo + aggiunta revisore

--- a/docs/interni/verbali/2023_09_11_I/2023_09_11_I.tex
+++ b/docs/interni/verbali/2023_09_11_I/2023_09_11_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 11/09/2023}
 \setredattori{Brotto Romina}
-\setrevisori{}
+\setrevisori{Soldà Matteo}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 11/09/2023
@@ -41,7 +41,7 @@
 
 \section*{Conclusioni}
 Durante lo sprint corrente è iniziata la stesura della documentazione in previsione all'ingresso in \textit{PB}. 
-In particolare il \textit{Manuale Utente}, di cui si è redatta la struttura base, la \textit{Specifica Tecnica} e la \textit{Specifica Architetturale}.
+In particolare il \textit{Manuale Utente} e la \textit{Specifica Tecnica}, di cui si è scritta la struttura generale.
 
 
 
